@@ -2,20 +2,6 @@
 
 source test-config.sh
 
-__SubmitFunctionalityTests_LegacySubmissionType() {
-    BasicJobSubmit magpie.${submissiontype}-hadoop-run-hadoopterasort-functionality-legacysubmissiontype
-    BasicJobSubmit magpie.${submissiontype}-hadoop-and-pig-run-testpig-functionality-legacysubmissiontype
-    BasicJobSubmit magpie.${submissiontype}-hadoop-and-mahout-run-clustersyntheticcontrol-functionality-legacysubmissiontype
-    BasicJobSubmit magpie.${submissiontype}-hbase-with-hdfs-run-hbaseperformanceeval-functionality-legacysubmissiontype
-    BasicJobSubmit magpie.${submissiontype}-hbase-with-hdfs-with-phoenix-run-phoenixperformanceeval-functionality-legacysubmissiontype
-    BasicJobSubmit magpie.${submissiontype}-spark-run-sparkpi-functionality-legacysubmissiontype
-    BasicJobSubmit magpie.${submissiontype}-spark-with-hdfs-run-sparkwordcount-copy-in-functionality-legacysubmissiontype
-    BasicJobSubmit magpie.${submissiontype}-spark-with-yarn-run-sparkwordcount-copy-in-functionality-legacysubmissiontype
-    BasicJobSubmit magpie.${submissiontype}-spark-with-yarn-and-hdfs-run-sparkwordcount-copy-in-functionality-legacysubmissiontype
-    BasicJobSubmit magpie.${submissiontype}-storm-run-stormwordcount-functionality-legacysubmissiontype
-    BasicJobSubmit magpie.${submissiontype}-spark-with-zeppelin-run-checkzeppelinup-functionality-legacysubmissiontype
-}
-
 __SubmitFunctionalityTests_BadJobNames () {
     BasicJobSubmit magpie.${submissiontype}-hadoop-run-hadoopterasort-functionality-job-name-whitespace
     BasicJobSubmit magpie.${submissiontype}-hadoop-run-hadoopterasort-functionality-job-name-dollarsign
@@ -274,7 +260,6 @@ __SubmitFunctionalityTests_ScriptArgs() {
 }
 
 SubmitFunctionalityTests() {
-    __SubmitFunctionalityTests_LegacySubmissionType
     __SubmitFunctionalityTests_BadJobNames
     __SubmitFunctionalityTests_AltJobTimes
     __SubmitFunctionalityTests_AltConfFilesDir
